# optimisation-of-openmp-cholesky-factorisation-on-hpc

./: .gitignore  CMakeLists.txt  README.md
b2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
b3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/: benchmark.cpp
build_clean/: CMakeCache.txt  CMakeDoxyfile.in  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_clean/Testing/Temporary/: CTestCostData.txt
build_v0/: CMakeCache.txt  CMakeDoxygenDefaults.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v0/Testing/Temporary/: CTestCostData.txt
build_v1/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v1/Testing/Temporary/: CTestCostData.txt
build_v2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v2/Testing/Temporary/: CTestCostData.txt
build_v3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v3/Testing/Temporary/: CTestCostData.txt
docs/: Doxyfile
docs/doxygen/: benchmarking.md  build.md  mainpage.md  pipeline.md  plots.md  testing.md
example/: main.cpp
include/: mphil_dis_cholesky.h
jobs/: bench_cclake.sh  bench_cclake_numa.sh  bench_icelake.sh  bench_icelake_v0.sh  bench_icelake_v0_n8000.sh  bench_icelake_v1.sh  bench_icelake_v3.sh  compare_v2v3_icelake.sh  template_icelake.sh
report/: Makefile  fix_amdahl.py  report.lof  report.lot  report.md  report.out  report_my.md
report/tables/: peak_summary.csv  peak_summary.md
results/: bench_cclake_26033046_20260324_160653.csv  bench_cclake_numa_close_26093275_20260325_155822.csv  bench_cclake_numa_spread_26093275_20260325_155822.csv  bench_icelake_26033045_20260324_125600.csv  bench_icelake_v0_26153761_20260325_212344.csv  bench_icelake_v0_n8000_26458876_20260328_144504.csv  bench_icelake_v1_26090357_20260325_124737.csv  bench_icelake_v3_26093278_20260325_134511.csv  compare_v2_26164912_cpu-q-583.csv  compare_v3_26164912_cpu-q-583.csv
scripts/: plot_bench.py
src/: mphil_dis_cholesky.cpp  mphil_dis_cholesky_testing.cpp
test/: test_cholesky.cpp  test_n2.cpp
